fix z-index of user menu (overlap of sticky search headers) - also in vertical mode

--- a/css/includes/components/_global-menu.scss
+++ b/css/includes/components/_global-menu.scss
@@ -52,6 +52,10 @@
    }
 }
 
+.topbar {
+   z-index: $zindex-fixed;
+}
+
 .sidebar {
 
    & ~ .navbar {
